--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     padding: 0%;
     margin: 0%;
     font-family: Arial, Helvetica, sans-serif;
-    
+    box-sizing: border-box;
 }
 
 .container {
@@ -24,7 +24,28 @@
     background-color: antiquewhite;
     display: flex;
     flex-direction: column;
-    position: absolute;
-    top: 50px;
-    left: 0px;
+    height: 100%;
+    padding: 20px;
+    position: fixed;
+    justify-content: flex-start;
+    
+    top: 0;
+    left: 0;
+    
+                           }
+
+
+.nav .item2 {
+    display: flex;
+    flex-direction: column;
+    padding: 8px;
+}
+form {
+    display: flex;
+    justify-content: center;
+}
+a {
+    display: flex;
+    justify-content: center
+    ;
 }
