--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     margin: 0%;
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
+    background-color: antiquewhite;
 }
 
 .container {
@@ -19,6 +20,16 @@
     background-color: rgb(249, 224, 184); 
     
 }
+
+.Cuadro1 {
+    background-color: chocolate;
+    color: brown;
+    display: flex;
+    justify-content: center;
+}
+
+
+
 .nav { 
     color: red;
     background-color: antiquewhite;
@@ -48,4 +59,20 @@ a {
     display: flex;
     justify-content: center
     ;
+}
+
+.footer {
+    color: darkred;
+    background-color: slategrey;
+    padding: 15px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    position: fixed;
+    bottom: 0;
+
+}
+    
+    
 }
