--- a/styles.css
+++ b/styles.css
@@ -1,78 +1,105 @@
 * {
-    padding: 0%;
-    margin: 0%;
-    font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
-    background-color: antiquewhite;
+    margin: 0;
+    padding: 0;
 }
 
-.container {
+.Nombre {
+    background-color: #140f07;
+    font-size: 2.3rem;
     display: flex;
     justify-content: center;
-    background-color: rgb(160, 137, 101);
-    color: rgb(26, 2, 2);
+    color: red;
 }
 
-.item {
+.Navegation {
+    background-color: #0e2448;
     display: flex;
-    justify-content: center;
-    color: brown;
-    background-color: rgb(249, 224, 184); 
+    flex-direction: column;
+    width: fit-content;
+    position: fixed;
+    height: 100%;
+    top: 0;
     
 }
 
-.Cuadro1 {
-    background-color: chocolate;
-    color: brown;
-    display: flex;
-    justify-content: center;
+.Navegation li{
+    padding: 20px;
+    color: #e5d9ed;
 }
 
-
-
-.nav { 
-    color: red;
-    background-color: antiquewhite;
+.Main {
+    padding: 100px;
+    background-color: #375fad;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     height: 100%;
-    padding: 20px;
-    position: fixed;
-    justify-content: flex-start;
+    justify-content: center;
+    align-items: center;
     
-    top: 0;
-    left: 0;
-    
-                           }
+}
 
-
-.nav .item2 {
+.Main li{
+    list-style: none;
     display: flex;
     flex-direction: column;
-    padding: 8px;
+   background-color: #6ba4fd;
+    border-radius: 5px;
+    border-style: groove;
+    border-color: black;
+    padding: 20px;
+    
 }
-form {
-    display: flex;
+
+
+
+.LM  {
     justify-content: center;
+    position: relative; 
 }
-a {
-    display: flex;
-    justify-content: center
-    ;
+
+.Titulo1 {
+    background-color: #5f5a87 !important;
+    justify-content: center;
+    text-align: center;
+    height: 10%;
+    align-items: center;
+    width: 80%;
+    margin: 15px;
+    flex-direction: column;
 }
+
+.Titulo2 {
+    background-color: #a39fde !important;
+    justify-content: center;
+    text-align: center;
+    height: 10%;
+    align-items: center;
+    width: 80%;
+    margin: 15px;
+}
+
+
+.Titulo3 {
+    background-color: #e5d9ed !important;
+    justify-content: center;
+    text-align: center;
+    height: 10%;
+    align-items: center;
+    width: 80%;
+    margin: 15px;  
+    
+}
+
 
 .footer {
-    color: darkred;
-    background-color: slategrey;
-    padding: 15px;
-    width: 100%;
+    background-color: #aff3fa;
+    text-align: center;
+    padding: 16px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
-    position: fixed;
-    bottom: 0;
+}
 
-}
-    
-    
-}
+@media (min-width: 600px) 
